infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yts-prod
  labels:
    app.kubernetes.io/name: youtube-success-ml
    app.kubernetes.io/instance: prod
